--- a/style.css
+++ b/style.css
@@ -1,26 +1,28 @@
 /* TOP HEADER */
-#main-header {display: flex; height: 8vh; align-items: center; justify-content: space-around;}
 
-#logo {color: rgb(255, 255, 255); font-family: "Fredoka One", sans-serif; outline-color: rgb(0, 0, 0); outline-width: 2cm;}
+#main-header {display: flex;
+   height: 10; 
+   align-items: center; 
+   justify-content: space-around;
+   background-color: #014d03f5;
+  }
 
-h1 {margin-top: 15px;}
+#logo {color: #f7faf7f5;
+   font-weight: 180;
+   font-size: 4vh;
+   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+  }
 
-body>header 
-{background-color: orange;
-color:aliceblue;}
-
-.p {list-style: none; display: flex; }
-
-.p>li {padding: 16px;}
-
-
-
-
-/* MAIN & SIDE BAR */
 
 /* MAIN */
+
+/* gtp main */
+
+
+
+/* gtp main */
 body 
- {font-family: Helvetica, Arial, sans-serif;
+ {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin: 0px; font-size: 1.5vw;}
 
 .facts {text-align: center; font-size: 2vh;}
@@ -33,30 +35,60 @@ body
 
 body>main article {margin: auto; width: 70%;}
 
+
+
+
+
+
+
+
+
+/* FORM */
+
 form {text-align: center;}
 
-#form-h2 {text-align: center;}
+#form-h2 {text-align: center;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+font-size: 3.5vh;
+color: #014d03f5;
+}
 
 image {border-radius: 50%;}
 
 
-/* SIDE BAR */
-
-#main-content {display: flex; justify-content: space-around; }
-
-#main-content>div {width: 70%;}
-
-
-
-
-/* MAIN & SIDE BAR FIN */
-
-
 /* FOOTER */
 body>footer
- {background-color: orange; display: flex; }
+ {background-color: #014d03f5;
+   display: flex;
+   color: #f7faf7f5;
+   font-style: oblique;
+   font-weight: 75;
+   font-size: larger;
+   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   justify-content: space-between;
+   }
 
 
- .footer-ul {display: flex; list-style: none; color: white; margin-left: 20px;}
+ .footer-ul {display: flex;
+   list-style: none;
+    color: white;
+    margin-left: 500px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 2.5vh;
+    font-weight: 20;
+    color: #f7faf7f5;
+    align-items: middle;
+    }
 
-.footer-ul>div>li>a { margin-left: 12px; text-decoration: none;}
+.footer-ul>div>li>a { margin-left: 12px; 
+  text-decoration: none;
+}
+
+.left {text-align: left;
+padding-left: 3vh;
+}
+
+.right {text-align: right;
+padding-right: 3vh;
+
+}
