--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@
 
 /* MAIN */
 
-/* gtp main */
 
 #main {padding-top: 8vh;
 
@@ -36,11 +35,11 @@
         }
 
         .row:nth-child(odd) {
-            flex-direction: row; /* Image on the left, text on the right */
+            flex-direction: row; 
         }
 
         .row:nth-child(even) {
-            flex-direction: row-reverse; /* Image on the right, text on the left */
+            flex-direction: row-reverse; 
         }
 
         .text {
@@ -58,7 +57,6 @@
         }
     
 
-/* gtp main */
 body 
  {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin: 0px; font-size: 1.5vw;}
@@ -72,13 +70,6 @@ body
 
 
 body>main article {margin: auto; width: 70%;}
-
-
-
-
-
-
-
 
 
 /* FORM */
